--- a/Web/99/application/admin/view/menu.html
+++ b/Web/99/application/admin/view/menu.html
@@ -176,10 +176,10 @@
                             <a class="" href="{:Url('admin/Setup/reward')}">邀请奖励</a>
                           </li>-->
 
-                          <li {if $contrname == 'Setup' && $actionname == 'notice'} class="active" {/if} >
+                          <li {if $contrname == 'Setup' && ($actionname == 'notice' || $actionname == 'addnotice')} class="active" {/if} >
                             <a class="" href="{:Url('admin/Setup/notice')}">公告列表</a>
                           </li>
-                          <li {if $contrname == 'Setup' && $actionname == 'gallery'} class="active" {/if} >
+                          <li {if $contrname == 'Setup' && ($actionname == 'gallery' || $actionname == 'addgallery')} class="active" {/if} >
                             <a class="" href="{:Url('admin/Setup/gallery')}">首页轮播</a>
                           </li>
                           
