--- a/Web/99/application/admin/view/setup/addnotice.html
+++ b/Web/99/application/admin/view/setup/addnotice.html
@@ -42,10 +42,10 @@
                                   </div>
 
                                   <div class="form-group">
-                                      <label class="col-lg-2 control-label">状态</label>
+                                      <label class="col-lg-2 control-label">类型</label>
                                       <div class="col-lg-6">
-                                          <label><input type="radio" name="state" id="state" value="1" {if condition="$item.state eq 1"}checked{/if} /> 启用 </label>
-                                          <label><input type="radio" name="state" id="state" value="0" {if condition="$item.state eq 0"}checked{/if} /> 停用 </label>
+                                          <label><input type="radio" name="state" id="state" value="1" {if condition="$item.state eq 1"}checked{/if} /> 走马灯 </label>
+                                          <label><input type="radio" name="state" id="state" value="0" {if condition="$item.state eq 0"}checked{/if} /> 弹出框 </label>
                                       </div>
                                   </div>
 
