--- a/Web/99/application/home/view/nav.html
+++ b/Web/99/application/home/view/nav.html
@@ -13,7 +13,7 @@
             </a>
         </li>
         <li class="">
-            <a href="javascript:viod(0)" class="forJsClick" data-url="{:url('/home/index/withdraw')}">
+            <a href="javascript:viod(0)" class="forJsClick" data-url="{:url('/home/index/bankcard')}">
                 <i class="iconfont icon-tixian" ></i>
                 提现
             </a>
