--- a/Web/99/application/home/view/index/historynotice.html
+++ b/Web/99/application/home/view/index/historynotice.html
@@ -40,7 +40,7 @@
         <div class="flex item  align-items" >
             <div class="box flex column " >
 
-                <div class=" fontDetail" >{:date('Y-m-d',$vo.time)}</div>
+                <!--<div class=" fontDetail" >{:date('Y-m-d',$vo.time)}</div>-->
             </div>
         </div>
         <div class="content" >
