--- a/Web/99/application/home/view/login/register.html
+++ b/Web/99/application/home/view/login/register.html
@@ -97,15 +97,15 @@
                     </div>
                 </div>
                 {/if}
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        {if $conf.sys_invit eq 1}
-                        <input type="text" class="form-control" id="invitCode" name="invitCode" placeholder="邀请码(必填)">
-                        {else/}
-                        <input type="text" class="form-control" id="invitCode" name="invitCode" placeholder="邀请码(选填)">
-                        {/if}
-                    </div>
-                </div>
+                <!--<div class="form-group">-->
+                <!--    <div class="col-sm-12">-->
+                <!--        {if $conf.sys_invit eq 1}-->
+                <!--        <input type="text" class="form-control" id="invitCode" name="invitCode" placeholder="邀请码(必填)">-->
+                <!--        {else/}-->
+                <!--        <input type="text" class="form-control" id="invitCode" name="invitCode" placeholder="邀请码(选填)">-->
+                <!--        {/if}-->
+                <!--    </div>-->
+                <!--</div>-->
                 <!--<div class="form-group">-->
                 <!--<div class="col-sm-12 fontDetail">-->
                 <!--<label>-->
