--- a/Web/99/application/index/view/index/historynotice.html
+++ b/Web/99/application/index/view/index/historynotice.html
@@ -36,7 +36,7 @@
     <div class="flex item  align-items" >
         <!-- <img class=" mr"  src="./static/images/mock_img_dts.png" /> -->
         <div class="box flex column " >
-            <div class=" fontDetail" >{:date('Y-m-d',$vo.time)}</div>
+            <!--<div class=" fontDetail" >{:date('Y-m-d',$vo.time)}</div>-->
         </div>
     </div>
     <div class="content" >
