--- a/Web/99/application/index/view/login/register.html
+++ b/Web/99/application/index/view/login/register.html
@@ -96,18 +96,18 @@
         </div>
     </div>
     {/if}
-    <div class="weui-cells weui-cells_form fontTitle">
-        <div class="weui-cell">
-            <div class="weui-cell__hd"><label class="weui-label">邀请码:</label></div>
-            <div class="weui-cell__bd">
-                {if $conf.sys_invit eq 1}
-                <input id="invitCode" class="weui-input" placeholder="必填">
-                {else/}
-                <input id="invitCode" class="weui-input" placeholder="选填">
-                {/if}
-            </div>
-        </div>
-    </div>
+    <!--<div class="weui-cells weui-cells_form fontTitle">-->
+    <!--    <div class="weui-cell">-->
+    <!--        <div class="weui-cell__hd"><label class="weui-label">邀请码:</label></div>-->
+    <!--        <div class="weui-cell__bd">-->
+    <!--            {if $conf.sys_invit eq 1}-->
+    <!--            <input id="invitCode" class="weui-input" placeholder="必填">-->
+    <!--            {else/}-->
+    <!--            <input id="invitCode" class="weui-input" placeholder="选填">-->
+    <!--            {/if}-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <!--</div>-->
     <div id="submit" class=" ripple borderRadius">
         <a id="subBtn" href="javascript:;" class="weui-btn  bgDisable  ">注册</a>
     </div>
