--- a/Web/99/application/index/view/order/history.html
+++ b/Web/99/application/index/view/order/history.html
@@ -203,9 +203,12 @@
                             '                            <div class="mt">'+(_rsdata[i].ostyle == 0 ? '买涨' : '买跌')+'：¥'+_rsdata[i].fee+'</div>\n' +
                             '                            <div class="mt">建仓点数：¥'+_rsdata[i].buyprice+'</div>\n' +
                             '                            <div class="mt">下单时间 '+_rsdata[i].buytime+'</div>\n' +
+                            '                            <div class="mt">秒数 '+_rsdata[i].time+'</div>\n' +
                             '                        </div>\n' +
                             '                        <div>\n' +
                             '                            <div class="mt textr">手续费：' + _rsdata[i].sx_fee + '</div>\n' +
+                            '                            <div class="mt">平仓时间 '+_rsdata[i].selltime+'</div>\n' +
+
                             '                            <div class="mt textr" '+_color+'>平仓点数：¥'+_rsdata[i].sellprice+'</div>\n' +
                             '                            <div class="fontDanger mt money textr" '+_color+'>\n' +
                             '                                实际盈亏：¥'+_rsdata[i].ploss+'\n' +
